# libft

./: CMakeLists.txt  Makefile_example  a.out  main.c  note  todo.md
depreciate/dll/: dll_ptr_add_create.c
depreciate/double_linked_list_circular/: dll_c_construct.c
depreciate/sort/: ft_quick_sort.c  quick_sort_dll.c
file/: Makefile
file/char/: ft_isalnum.c  ft_isalpha.c  ft_isdigit.c  ft_putchar.c  ft_toupper.c
file/dll/: dll_construct.c
file/dll/src/: dll_add.c  dll_drop_index.c  dll_func.c  utils.c
file/includes/: define.h  dll.h  ft_library_header.h  ft_string.h  io.h  memory.h  print.h  printf.h  test.h
file/memory/: ft_mem_eq.c  ft_memccpy.c  ft_memcmp.c  ft_memmove.c  ft_memory.c  ft_zero.c
file/print/: array.print.c
file/printf/: main_pfff.c  pf.main.c  pf.number.c
file/printf/buffer/: head_buffer.c
file/printf/data/: manage_before_printer.c
file/printf/data/nb/float/: head_double.c
file/printf/data/nb/integer/: head_integer_signed.c  head_interger_n.c
file/printf/data/nb/unsigned/: utils_unsigned_integer.c
file/printf/data/nb/unsigned_variation/: head_unsigned_hexa.c  head_unsigned_octal.c  head_unsigned_ptr.c
file/printf/data/text/other/: head_percent.c
file/printf/data/text/str/: manage_str.c
file/printf/parseur/: parseur_flag_utils.c  parseur_utils.c
file/printf/printer/: function_printer.c  head_printer.c  utils_printer.c
file/printf2/: number.c  pf.main.c  pf.number.c
file/string/: check_char_into_str.c  ft_str_dup.c  ft_str_eq.c  ft_str_split.c  ft_strchr.c  ft_strcpy.c  ft_strjoin.c  ft_strlen.c
file/tab/: tab_func.c
file/test/: ft_struc_test.c
file/test/test_file/: all_test.c  test_memory.c  test_str.c  test_test.c
in_progress/sort/: quick_sort.c
libft/: CMakeLists.txt  Makefile  ft_library_headerd.h
libft/char/: ft_isalnum.c  ft_isascii.c  ft_isprint.c  ft_put_uni.c  ft_tolower.c
libft/dll/: dll_construct.c  dll_deep_header.h
libft/dll/src/: dll_add.c  dll_drop_index.c  dll_drop_link.c  dll_func.c  dll_ptr_add_create.c  utils.c
libft/header/: define.h  dll.h  ft_library_headerd.h  ft_string.h  io.h  memory.h  printf.h  string.h  test.h
libft/header/struct/: dll_struct.h
libft/includes/: define.h  dll.h  ft_library_header.h  ft_string.h  io.h  memory.h  tab.h  test.h
libft/io/: ask_gnl.c  errno_exit.c  ft_atoi.c  ft_error.c  get_argv.c  get_next_line.c  get_option.c  open_file.c  test_c.c
libft/memory/: ft_dup_memory.c  ft_mem_free.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memory.c  ft_memset.c  ft_str_new.c
libft/printf/: ft_str_rev.c  ft_strcat.c  main_pfff.c  utils_main.c
libft/printf/buffer/: head_buffer.c
libft/printf/data/: manage_before_printer.c
libft/printf/data/nb/float/: head_double.c
libft/printf/data/nb/integer/: head_integer_signed.c  head_interger_n.c
libft/printf/data/nb/unsigned/: head_integer_unsigned.c  utils_unsigned_integer.c
libft/printf/data/nb/unsigned_variation/: head_unsigned_binairy.c  head_unsigned_hexa.c  head_unsigned_octal.c  head_unsigned_ptr.c
libft/printf/data/text/char/: head_char.c
libft/printf/data/text/other/: head_percent.c
libft/printf/data/text/str/: manage_str.c
libft/printf/parseur/: head_parseur.c  parseur_flag.c  parseur_flag_utils.c  parseur_utils.c
libft/printf/printer/: function_printer.c  head_printer.c  utils_printer.c
libft/string/: check_char_into_str.c  find_first_char.c  free_str.c  ft_how_many_char.c  ft_itoa.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_skip_char.c  ft_str_dup.c  ft_str_eq.c  ft_str_new.c  ft_str_rev.c  ft_str_split.c  ft_strcat.c  ft_strchr_len.c  ft_strclen.c  ft_strdup.c  ft_striter.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strndup.c  ft_strnjoin.c  ft_strrchr.c  ft_strstr.c  ft_strsub.c  ft_strtrim.c  is_all_number.c  str_is_int.c
libft/tab/: tab_func.c
libft/test/: all_test.c  ft_link_test.c  ft_struc_test.c  test.h  test_GNL  test_memory.c  test_str.c
libft/test/test_file/: all_test.c  test.h  test_get_argv.c  test_get_option.c  test_memory.c  test_str.c  test_test.c
